# satisfying_ball_simulator

./: CMakeLists.txt  README.md
include/SDL3_gfx/: SDL3_gfxPrimitives.h
include/imgui/backends/: imgui_impl_sdl3.h  imgui_impl_sdlrenderer3.h
lib/: SDL3_gfx_Static.lib
src/: AppWindow.cpp  AppWindow.h  Application.cpp  Application.h  Ball.cpp  Ball.h  EventHadler.h  ParamsGUI.h  ParticleSystem.h  Ring.cpp  Ring.h  RingGame.cpp  RingGame.h  Time.h  main.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_sdl2.cpp  imgui_impl_sdl3.cpp  imgui_impl_sdlgpu3.cpp  imgui_impl_sdlrenderer3.cpp  imgui_tables.cpp  imgui_widgets.cpp
